objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Affecte_moi__c</fullName>
        <formula>affectation__c == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affecté à moi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comportement_attendu__c</fullName>
        <label>Comportement attendu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comportement_constat__c</fullName>
        <label>Comportement constaté</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>Configuration__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exigence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exigence</label>
        <referenceTo>Exigence__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priorite__c</fullName>
        <label>Priorité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spec_modifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spec à modifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A réaliser</fullName>
                    <default>true</default>
                    <label>A réaliser</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>A valider</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
                <value>
                    <fullName>Refusé</fullName>
                </value>
                <value>
                    <fullName>Abandonné - Non reproductible</fullName>
                </value>
                <value>
                    <fullName>Abandonné - Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_client__c</fullName>
        <label>Statut client</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accordé</fullName>
                </value>
                <value>
                    <fullName>Avenant à faire</fullName>
                </value>
                <value>
                    <fullName>Vendu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <label>Titre</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anomalie</fullName>
                </value>
                <value>
                    <fullName>Evolution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>affectation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affecté à</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>